master.css
/* IMPORTS A CUSTOM FONT FROM GOOGLE FONTS */
@import url('https://fonts.googleapis.com/css?family=Noto+Sans:400,700');

/* ===========================================================================*/
/* DEFINING COLOUR VARIABLES */
/* ===========================================================================*/
:root {
  --lightGrey: #5D5F6D;
  --darkGrey: #2B2D42;
  --lightBlue: #0353A4;
  --darkBlue: #0F084B;
}

/* ===========================================================================*/
/* GENERAL PAGE STYLING */
/* ===========================================================================*/
body {
  margin: 0px;
  font-family: 'Noto Sans';
  width: 100%;
  padding-bottom: 20px;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}
/* ===========================================================================*/
/* BACKGROUND */
/* ===========================================================================*/
#home-page{
background-image: url('Images/homeBackgroundImage.jpg');
}
#all-projects-page {
  background-image: url('Images/background2.jpg');
}
/* ===========================================================================*/
/* TEXT */
/* ===========================================================================*/
h1 {
  font-weight: 700;
  font-size: 85px;
  color: var(--darkBlue);
  padding-bottom: 10px;
  text-shadow: 1px 1px 5px;
}

h3 {
  font-size: 40px;
  color: white;
}

h4 {
  padding: 5px 0px;
  font-size: 30px;
}
p {
  margin-top: 20px;
  padding: 0px;
}

/* reduces heading font size on smaller devices */
@media screen and (max-width: 768px) {
  h1{
    font-size: 60px;
  }

  h3{
    font-size: 30px;
  }
}
/* ===========================================================================*/
/* HEADER */
/* ===========================================================================*/
.header {
  border-left: 4px solid;
  margin-top: 80px;
  padding: 2%;
}

/* ===========================================================================*/
/* FOREGROUND BODY */
/* ===========================================================================*/
.main-body .header {
  margin-top: 25px;
}

.main-body {
  /* background-color: white; */
  margin-top: 20px;
  /* box-shadow: 0px 0px 20px black; */
  height: 100%;
}

.whole-page {
  max-width: 100%;
  height: 90%;
}

.body-content {
  margin: 0px;
  padding: 0px;
  /* border-left: 4px solid black; */
}

/* ===========================================================================*/
/* HOME PAGE BUTTONS */
/* ===========================================================================*/
.nav-buttons .button {
  border-left: 4px solid black;
  text-align: left;
  padding: 20px 2%;
  margin-top: 5%;
}

.nav-buttons a {
  text-decoration: none;
  color: black;
  font-size: 26px;
  font-weight: bold;
}

.button:hover{
  border-left: 8px solid black;
  text-decoration: underline;
}
/* ===========================================================================*/
/* PROJECT CARDS */
/* ===========================================================================*/
.project-card .grid-100{
  padding: 0px;
}

.project-card{
  /* background-color: var(--lightGrey); */
  color: white;
  text-shadow: 1px 1px 4px black;
  border-left: 4px solid black;
  height: 400px;
  margin-top: 20px;
  /* box-shadow: 0px 0px 10px black; */
  padding: 5px;
}

/* ===========================================================================*/
/* NAVIGATION BAR */
/* adapted and customised from the example on w3schools */
/* ===========================================================================*/
.nav-bar {
  overflow: hidden;
  background-color: var(--darkGrey);
  padding: 0px;
  max-width: 100%;
}

.nav-bar a {
  float: left;
  display: block;
  color: white;
  text-align: left;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.nav-bar a:hover:not(.active) {
  background-color: var(--lightGrey);
}

.active {
  background-color: var(--lightBlue);
  color: white;
}

.nav-bar .icon {
  display: none;
  background-color: var(--lightBlue);
}

@media screen and (max-width: 768px) {
  .nav-bar a:not(:first-child) {
    display: none;
  }

  .nav-bar a.icon {
    float: right;
    display: block;
  }
}

@media screen and (max-width: 768px) {
  .nav-bar.responsive {
    position: relative;
  }

  .nav-bar.responsive .icon {
    position: absolute;
    right: 0;
    top: 0;
  }

  .nav-bar.responsive a {
    float: none;
    display: block;
    text-align: left;
  }
}

